--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciador de arquivos</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" 
+    integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Files</h1>
+    <h1 class="titulo__principal">My Files</h1>
     <hr> 
     <aside class="menu__lateral">
-        <button>Upload file</button>
-        <button>New Folder</button>
+        <p class="menu__lateral__titulo">Comece aqui:</p>
+        <button class="menu__lateral__botao">Upload file</button>
+        <button class="menu__lateral__botao">New Folder</button>
     </aside>  
 </body>
 </html>
