Adicionada a função de upload files diretamente pelo input files

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <aside class="principal__menu__lateral">
             <h2 class="menu__lateral__titulo">Comece aqui:</h2>
             <label for="file" aria-label="Enviar arquivo" class="menu__lateral__botao menu__lateral__enviar">Upload file:</label>
-            <input type="file" id="file" style="display: none;">
+            <input type="file" id="file" value="Adicionar" style="display: none;" multiple>
             <button class="menu__lateral__botao" aria-label="Criar uma nova pasta">New Folder</button>
         </aside>
         <section class="principal__arquivos" id="drop-area">
